ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-demo-tls
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.alb.yc.io/subnets: enp1mpc678t4km4d1cs8
    ingress.alb.yc.io/security-groups: enpqeull9mu66gh4ea1d, enpi1bcnn7qr8e639dji, enphg895n54s0no5csid
    ingress.alb.yc.io/external-ipv4-address: auto
spec:
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: phpmyadmin-deployment
                port:
                  number: 80
